--- a/README.rdoc
+++ b/README.rdoc
@@ -2,8 +2,8 @@
 
 ==This is an app for viewing, editing, sharing, and version control of written documents.
 
-It is a ruby on rails web application written by James Milani as my fourth project for the Web Development Immersive at General Assembly. June 2014.
+It is a ruby on rails web application written by Lex Alexander and James Milani as our fourth project for the Web Development Immersive at General Assembly, June 2014.
 
-The idea for this application was conceived with the help of Lex Alexander and Lorin Thwaits.
+The idea for this application was conceived with the help of Lorin Thwaits our mentor and friend.
 
 It originally came about due to the desire to create a secure and private way for writers to share their work and to allow the people that they share it with to have easy editing access, but to also allow for the author to maintain the integrity of their ideas and work. It keeps the editor's revisions seperate from the author's original work. As the idea process continued, the notion of "version control for writers" came about. Thus, when someone uploads their piece to their profile, it will persist and be viewable alongside future revisions so that authors can see how their work has changed over time.
